# Desktop-App

./: .base64_decode.ps1  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SKILL.md  build-libs.yml  build.sh  engine.cppcheck  functions.yml  nix-shell.sh  vars.yml  vs-chromium-project.txt  windscribe.cppcheck  windscribe.sln
backend/linux/helper/: CMakeLists.txt  execute_cmd.cpp  firewallcontroller.cpp  firewallcontroller.h  firewallonboot.cpp  firewallonboot.h  helper.pro  logger.cpp  logger.h  main.cpp  ovpn.cpp  ovpn.h  process_command.cpp  process_command.h  server.cpp  server.h  utils.cpp  utils.h
backend/mac/helper/: CMakeLists.txt  execute_cmd.cpp  execute_cmd.h  files_manager.cpp  files_manager.h  firewallcontroller.cpp  firewallcontroller.h  firewallonboot.cpp  firewallonboot.h  helper-info.plist  helper-launchd.plist  helper.cpp  keychain_utils.h  logger.h  macspoofingonboot.cpp  macutils.h  macutils.mm  ovpn.cpp  ovpn.h  process_command.cpp  process_command.h  server.cpp  server.h  utils.cpp  utils.h
backend/mac/splittunnelextension/: CMakeLists.txt  FlowTCP.h  FlowTCP.mm  FlowUDP.h  FlowUDP.mm  Info.plist  Settings.mm  TransparentProxyProvider.h  TransparentProxyProvider.mm  Utils.h  Utils.mm  splittunnelextension.entitlements
backend/windows/changeics/: CMakeLists.txt  IcsManager.h  changeics.cpp  changeics.rc  changeics.vcxproj  changeics.vcxproj.filters  file_wrapper.cpp  file_wrapper.h  icsmanager.cpp  miniatl.h  resource.h  stdafx.h
backend/windows/windscribe_install_helper/: CMakeLists.txt  basic_command.cpp  basic_command.h  command_parser.cpp  command_parser.h  install_service_command.cpp  install_service_command.h  install_tap_command.cpp  install_tap_command.h  logger.cpp  logger.h  resource.h  stdafx.cpp  uninstall_tap_command.cpp  uninstall_tap_command.h  windscribe_install_helper.cpp  windscribe_install_helper.rc  windscribe_install_helper.sln  windscribe_install_helper.vcxproj  windscribe_install_helper.vcxproj.filters
backend/windows/windscribe_service/: CMakeLists.txt  active_processes.cpp  active_processes.h  adapters_info.cpp  adapters_info.h  all_headers.h  apps_ids.cpp  apps_ids.h  cleardns_on_tap.cpp  cleardns_on_tap.h  close_tcp_connections.cpp  close_tcp_connections.h  date_time_helper.cpp  date_time_helper.h  dns_firewall.cpp  dns_firewall.h  executecmd.cpp  executecmd.h  firewallfilter.cpp  firewallfilter.h  fwpm_wrapper.cpp  fwpm_wrapper.h  get_active_processes.cpp  get_active_processes.h  hostsedit.cpp  hostsedit.h  icsmanager.cpp  icsmanager.h  ikev2ipsec.cpp  ikev2ipsec.h  ikev2route.cpp  ikev2route.h  ioutils.cpp  ioutils.h  ip_address.cpp  ip_address.h  ipv6_firewall.cpp  ipv6_firewall.h  logger.cpp  logger.h  (+30 more)
backend/windows/wireguard_service/: CMakeLists.txt  ServiceMain.cpp  WireguardService.pro  wireguard_service.rc
client/: CMakeLists.txt  client.pro  client.rc  common.pri  info.plist  main.cpp  main_cli.cpp  main_gui.cpp  secrets.qrc
client/base/: CMakeLists.txt  languagecontroller.cpp  languagecontroller.h
client/base/backend/: backend.cpp  backend.h  connectstatehelper.cpp  connectstatehelper.h  notificationscontroller.cpp  notificationscontroller.h  persistentstate.cpp  persistentstate.h
client/base/launchonstartup/: CMakeLists.txt  launchonstartup.cpp  launchonstartup_linux.cpp  launchonstartup_mac.mm
client/base/localipcserver/: localipcserver.cpp  localipcserver.h
client/base/locations/: locationsmodel_manager.cpp  locationsmodel_manager.h  locationsmodel_roles.h
client/base/multipleaccountdetection/: multipleaccountdetection_posix.cpp  multipleaccountdetection_win.cpp  multipleaccountdetectionfactory.h  secretvalue_win.cpp
client/base/utils/: CMakeLists.txt  authchecker_linux.cpp  authchecker_mac.mm  authchecker_win.cpp  authcheckerfactory.h  writeaccessrightschecker.h
client/cli/: CMakeLists.txt  mainservice.cpp  mainservice.h
client/cli/application/: singleappinstance.cpp  singleappinstance.h  windscribeapplication.cpp  windscribeapplication.h
client/common/: CMakeLists.txt  changelog.txt  names.h
client/common/api_responses/: CMakeLists.txt  authtoken.cpp  authtoken.h  debuglog.cpp  debuglog.h  group.cpp  location.cpp  location.h  node.cpp  node.h  notification.cpp  notification.h  portmap.cpp  portmap.h  robertfilter.cpp  robertfilter.h  servercredentials.cpp  servercredentials.h  serverlist.cpp  staticips.cpp  staticips.h  (+1 more)
client/engine/: CMakeLists.txt  clientconnectiondescr.cpp  engine.pri  engine.qrc  engineserver.cpp  engineserver.h
client/gui/: CMakeLists.txt  blockconnect.cpp  blockconnect.h  dpiscaleawarewidget.h  dpiscalemanager.cpp  dpiscalemanager.h  freetrafficnotificationcontroller.cpp  freetrafficnotificationcontroller.h  generalmessage.h  generalmessagecontroller.cpp  generalmessagecontroller.h  gif.qrc  gui.pri  guitest.cpp  images.qrc  jpg.qrc  languagecontroller.cpp  loginattemptscontroller.cpp  loginattemptscontroller.h  mainwindow.cpp  mainwindow.h  mainwindowcontroller.cpp  mainwindowcontroller.h  mainwindowstate.cpp  showingdialogstate.cpp  showingdialogstate.h  svg.qrc  themecontroller.cpp  windowsizemanager.cpp  windowsizemanager.h  windscribe.qrc  windscribe_mac.qrc
gui/cli/: CMakeLists.txt  backendcommander.cpp  backendcommander.h  cli.pro  cli.pro.user.9e75e69  cli.rc  cli.vcxproj  cli.vcxproj.filters  cliapplication.cpp  cliapplication.h  cliarguments.cpp  cliarguments.h  languagecontroller.cpp  main.cpp  strings.cpp  strings.h  windscribe.qrc
libs/wsnet/: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json  wsnet_version.h.in
libs/wssecure/: CMakeLists.txt  README.md  dllmain.cpp  version.rc  version.rc.in  wssecure.cpp  wssecure.h  wssecure_globals.h
src/client/: CMakeLists.txt  client.rc.in  info.plist  main_cli.cpp  main_gui.cpp
src/helper/: CMakeLists.txt
src/windscribe-cli/: CMakeLists.txt  backendcommander.cpp  backendcommander.h  cli.rc  cliarguments.cpp  cliarguments.h  main.cpp  strings.cpp  strings.h  utils.cpp  utils.h
(+5467 files in other folders)
